--- a/backend/.env
+++ b/backend/.env
@@ -1,5 +1,6 @@
 PORT = 7800
 MONGODBURL = mongodb+srv://sharvaniyedla:4njQcaFghrD3Y8NA@clustersher.zphkstz.mongodb.net/travelusersdb
 #mongo pass = 4njQcaFghrD3Y8NA
-GOOGLE_API_KEY=AIzaSyBvJPUeVrp3VZWGkCn3_unQcQeFsq5-Fdo
+#GOOGLE_API_KEY=AIzaSyBvJPUeVrp3VZWGkCn3_unQcQeFsq5-Fdo
 JWT_SECRET = abcdkey
+GEMINI_API_KEY=AIzaSyAwSrE72pLjm6CDn77eDEp2Z584q1zaCmg
