final change to deploy

--- a/backend/.env
+++ b/backend/.env
@@ -1,5 +1,4 @@
 PORT = 7800
-MONGODBURL = mongodb+srv://sharvaniyedla:4njQcaFghrD3Y8NA@clustersher.zphkstz.mongodb.net/travelusersdb
-#mongo pass = 4njQcaFghrD3Y8NA
-#GOOGLE_API_KEY=AIzaSyBvJPUeVrp3VZWGkCn3_unQcQeFsq5-Fdo
+MONGODBURL = 'your mongourl'
+#GOOGLE_API_KEY='your api key'
 JWT_SECRET = abcdkey
